--- a/index.html
+++ b/index.html
@@ -18,26 +18,25 @@
 <container>
     <div class="jumbotron">
         <div class="row">
-            <h1 class="display-4">Hiya, Barbie / Hi, Ken</h1>
-            <p class="lead">You want to go for a ride? / Sure, Ken / Jump in / I'm a Barbie girl, in the Barbie world /Life in plastic, it's fantastic</p>
-            <p>You can brush my hair, undress me everywhere / Imagination, life is your creation / Come on, Barbie, let's go party / I'm a Barbie girl, in the Barbie world</p>
-            <p class="lead"><a class="btn-pink" href="#" role="button">Help me</a></p>
+            <h1 class="display-4">Hello world</h1>
+            <p class="lead">Welcome to BOotstrap v3.3.7. Check out this awesome jumbotron!</p>
+            <p class="lead"><a class="btn-pink" href="#" role="button">Learn more</a></p>
         </div>
     </div>
 
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-8">
-                <h1>Life in plastic, it's fantastic</h1>
+                <h1>Heading goes here</h1>
                 <hr/>
-                <p>You can brush my hair, undress me everywhere / Imagination, life is your creation / I'm a blond bimbo girl in a fantasy world / Dress me up, make it tight, I'm your dolly / You're my doll, rock'n'roll, feel the glamour in pink / Kiss me here, touch me there, hanky panky</p>
+                <p>Toffee lemon drops carrot cake lemon drops. Pudding topping biscuit chocolate cake pastry. Dragée dragée chupa chups soufflé halvah marzipan. Pie sugar plum lemon drops jelly jelly-o carrot cake topping chocolate cake.</p>
                 <br>
                 <div class="video">
                 <iframe height="500px" width="100%" src="https://www.youtube.com/embed/OoujaFsK-KE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
                 <br>
                 <div class="alert alert-pink" role="alert">  
-                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"> ! </span>&nbsp;&nbsp;&nbsp; You can touch / You can play / If you say, "I'm always yours
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"> ! </span>&nbsp;&nbsp;&nbsp; Whoa! This is a super important alert
                 </div>
             </div>
             <div class="col-sm-4">
@@ -47,7 +46,7 @@
                     <div class=" input">
                         <h2 class="input_title">Welcome Candidate!</h2>
                         <div class="input_body">
-                            I'm a Barbie girl, in the Barbie world
+                            You are a Starfleet Academy candidate. Greet the captain in a respectful fashion
                             <form class="greeting" role="greet">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Input your greeting..">
